--- a/css/base/gallery-layout.css
+++ b/css/base/gallery-layout.css
@@ -8,20 +8,22 @@ background-color: var(--clr2);
 }
 
 .gallery-container {
-    columns: 5;
-    gap: 20px;
-    padding: 1.5em;
+    background-color: var(--clr1);
+    padding-inline: 1.5em;
+    padding-block: 1.5em;
     margin-inline: 2em;
     border-radius: 15px;
-    background-color: var(--clr1);
 }
 
-.gallery-container img {
+.imgs-container img {
     width: 100%;
     box-shadow: 3px 6px 4px 0px black;
     border-radius: 10%;
 }
-
+.imgs-container{
+    columns: 5;
+    gap: 20px;
+}
 .gallery-meme {
     transition: 350ms;
     border-radius: 10%;
@@ -33,4 +35,95 @@ background-color: var(--clr2);
     cursor: pointer;
 
     opacity: 0.5;
+}
+
+
+/* Flexible BTN  */
+.flexible-btn {
+    /* font-family: ; */
+    display: block;
+    margin-inline: auto;
+    margin-block-start: 30px;
+    width: 13.75em;
+    height: 3.125em;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: var(--clr1);
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 0.5625em;
+    letter-spacing: 0.5625em;
+    font-size: 1.125em;
+}
+
+.flexible-btn:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.flexible-btn:active {
+    color: #000
+}
+
+.flexible-btn:active:after {
+    background: transparent;
+}
+
+.flexible-btn:hover:before {
+    opacity: 1;
+}
+
+.flexible-btn:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--clr1);
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
+
+/* Filter Input */
+
+input[name="imgs-filter"]{
+    padding: 6px 12px;
+    background: rgb(31, 32, 35);
+    border: 1px solid rgb(60, 63, 68);
+    border-radius: 4px;
+    font-size: 13px;
+    color: rgb(247, 248, 248);
+    height: 46px;
+    appearance: none;
+    /* transition: 0.6; */
+    transition: border 0.15s ease 0s;
+    display: block;
+    margin-inline: auto;
+    margin-block-end: 2em;
+}
+input[name="imgs-filter"]:focus{
+    outline: none;
+    box-shadow: none;
+    border: 3px solid var(--clr4);
 }
